# task_fastapi

./: README.md  celery_app.py  main.py  pyproject.toml  tasks.py
templates/: index.html  result.html  statuses.html
