[tool.poetry]
name = "task-fastapi"
version = "0.1.0"
description = ""
authors = ["EugeneSpiridonov <eugenespint@gmail.com>"]
readme = "README.md"
packages = [{include = "task_fastapi"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
celery = {extras = ["redis"], version = "^5.3.6"}
redis = "^5.0.1"
flower = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
